bunch of fixes (#4)
* fix: SWP-1039  Menu is broken in Publisher Client in Output Settings

* fix: error handling in case of non existing tenant is being added

* SWP-1008: Route of type 'content' cannot be selected as parent route for subroute

* SWP-1021: incoming list of articles show createdAt if updatedAt is null

* file structure cleaning

* SWP-1033: install theme on proper tenant

--- a/client/styles/sidebarLayout.scss
+++ b/client/styles/sidebarLayout.scss
@@ -1,7 +1,8 @@
 .sidebarLayout {
     display: flex;
-    padding: 0 !important;
     height: 100%;
+    position: absolute;
+    width: 100%;
 
     &__sidebar {
         flex: 0 0 200px;
